# mcp-observer-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/mcp_observer/: __init__.py  observer.py  run_manager.py  wrapper.py
tests/: simple_example.py  tests.py
